--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 	<h1>This is a Heading</h1>
 	<p>This is a paragraph</p>
 	<p>Anas Abbal</p>
+
+	<h1>This is a Heading</h1>
+	<p>This is a paragraph</p>
+	<h1>This is a Heading</h1>
+	<p>This is a paragraph</p>
 </body>
 </html>
